--- a/.github/workflows/x86-64.yml
+++ b/.github/workflows/x86-64.yml
@@ -16,10 +16,10 @@ on:
   #   types: started
 
 env:
-  CONFIG_FILE: config/x86/64.config
+  CONFIG_FILE: build/64.config
   SOURCE_URL: https://github.com/immortalwrt/immortalwrt
   SOURCE_BRANCH: openwrt-21.02
-  DIY_SH: scripts/custom.sh
+  DIY_SH: build/custom.sh
   TOOLCHAIN_TAG: toolchain
   CLASH_BINARY_PLATFORM: amd64
   TOOLCHAIN_RELEASE_UPLOAD: true
